--- a/matching_model.ipynb
+++ b/matching_model.ipynb
@@ -221,21 +221,7 @@
     "            mat = np.zeros(shape=(len(probs),vect.shape[0]))\n",
     "            \n",
     "            y_ikeys.append(spec.metadata[\"inchikey\"].split(\"-\")[0])\n",
-    "            \n",
-    "#             his_size = get_his_size(spec, cum_level)\n",
-    "#             his_ind = np.argsort(vect)[::-1][:his_size]\n",
-    "            \n",
-    "#             for m, p in enumerate(probs):        \n",
-    "                \n",
-    "#                 ## cripple vector\n",
-    "#                 mat[m] = vect.copy()\n",
-    "                                \n",
-    "#                 mask_missing = self.rng.uniform(0,1, his_size) < p\n",
-    "                \n",
-    "#                 cut_out_indices = his_ind[mask_missing]\n",
-    "                \n",
-    "#                 mat[m][cut_out_indices] = 0\n",
-    "            \n",
+    "                      \n",
     "            for m, p in enumerate(probs):        \n",
     "                \n",
     "                ## cripple vector\n",
@@ -251,11 +237,8 @@
     "                weighted = csr_matrix(mat)\n",
     "            \n",
     "            top_n = self.neigh.kneighbors(weighted, n_neighbors=n, return_distance=False)\n",
-    "            #sim = cosine_similarity(weighted, self.sparse_weighted_mz_matrix)\n",
-    "            # print(top_n)\n",
     "            for m, p in enumerate(probs): \n",
     "                \n",
-    "                #top_n_sindices = np.argsort(sim[m])[::-1][:n]\n",
     "                top_n_sindices = top_n[m]\n",
     "                top_n_ikeys = [spectrums_ref[i].metadata[\"inchikey\"].split(\"-\")[0] for i in top_n_sindices]\n",
     "                n_pred_ikeys_per_p[m][i] = top_n_ikeys\n",
@@ -620,14 +603,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aed5787d-9457-4e23-905b-6885a6809097",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "e2004190-f6ed-44b1-9672-7224d91d871a",
    "metadata": {},
@@ -665,10 +640,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9b449561-9057-4010-8f42-855877b60840",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/numpy/core/_asarray.py:136: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  return array(a, dtype, copy=False, order=order, subok=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8h 10min 11s, sys: 59min 3s, total: 9h 9min 14s\n",
+      "Wall time: 9h 9min 20s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "n_pred_ikeys_per_k, y_ikeys = matcher.match_topk_all(datasets[\"spec_train\"], datasets[tested], \\\n",
@@ -679,10 +671,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e004eada-37dc-4672-a624-7ca1a80289b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8h 58min 22s, sys: 47min 26s, total: 9h 45min 48s\n",
+      "Wall time: 3h 24min 32s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "n_pred_ikeys_per_p, y_ikeys = matcher.match_random_all(datasets[\"spec_train\"], datasets[tested], \\\n",
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2a7b587e-1274-4032-8759-b3c7fbbbdcd0",
    "metadata": {},
    "outputs": [],
@@ -705,10 +706,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c28cba8a-d360-4c03-bf53-3fe2038b4a35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8h 22min 50s, sys: 58min 36s, total: 9h 21min 27s\n",
+      "Wall time: 9h 21min 33s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "n_pred_ikeys_per_k, y_ikeys = matcher_weighted.match_topk_all(datasets[\"spec_train\"], \\\n",
@@ -719,10 +729,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "19eedef5-bf19-4f36-89ea-28d7aff87d2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8h 59min 58s, sys: 48min 33s, total: 9h 48min 32s\n",
+      "Wall time: 3h 27min 14s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "n_pred_ikeys_per_p, y_ikeys = matcher_weighted.match_random_all(datasets[\"spec_train\"], \\\n",
