add realdata test

--- a/data_splitting.ipynb
+++ b/data_splitting.ipynb
@@ -10,9 +10,7 @@
     "\n",
     "\n",
     "In this notebook we perform train-test split of our original datasets' files. \n",
-    "Since we need to cope with multiple records of most of the compounds, such a split needs to be done carefuly. \n",
-    "\n",
-    "Datasets characteristics and descriptions can be found in exploratory_data_analysis.ipynb notebook\n"
+    "Since we need to cope with multiple records of most of the compounds, such a split needs to be done carefuly. "
    ]
   },
   {
@@ -24,7 +22,6 @@
    "source": [
     "# path to datasets\n",
     "mona_path = \"/storage/brno1-cerit/projects/msml/data/MoNA-export-GC-MS_Spectra.msp\"\n",
-    "#nist_path = \"/storage/brno1-cerit/projects/msml/NIST_EI_MS.msp\"\n",
     "nist_path = \"/storage/brno6/home/xstary1/raims/data/20210925_NIST_EI_MS_cleaned.msp\""
    ]
   },
