--- a/explore_severity.ipynb
+++ b/explore_severity.ipynb
@@ -5,7 +5,8 @@
    "id": "643b0ce4-7aff-492d-ae5f-6e5558c78340",
    "metadata": {},
    "source": [
-    "# Explore severity"
+    "# Explore severity\n",
+    "Compute and plot the severity from precomputed matches"
    ]
   },
   {
