--- a/feedforward_model_LR_MLP-de_novo.ipynb
+++ b/feedforward_model_LR_MLP-de_novo.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FF model\n"
+    "# Fully-connected neural networks\n",
+    "Training, prediction, and visualisation of the multi-label classification by fully-connected neural networks based on linear regression and MLP.  "
    ]
   },
   {
@@ -212,8 +213,7 @@
     "mlp_3 = MLP(datasets[\"fixed_train\"].max_mz, (1000,1000, 1000))\n",
     "mlp_1s = MLP(datasets[\"fixed_train\"].max_mz, (500,))\n",
     "mlp_2s = MLP(datasets[\"fixed_train\"].max_mz, (500,500))\n",
-    "mlp_3s = MLP(datasets[\"fixed_train\"].max_mz, (500,500, 500))\n",
-    "\n"
+    "mlp_3s = MLP(datasets[\"fixed_train\"].max_mz, (500,500, 500))"
    ]
   },
   {
@@ -361,13 +361,6 @@
     "    model.to(device)\n",
     "    optim = torch.optim.Adam(model.parameters(), lr=lr)\n",
     "    loss_fn = nn.BCELoss(reduction=\"mean\")\n",
-    "\n",
-    "    # # init weights\n",
-    "    # for name, param in model.named_parameters():\n",
-    "    #     if \"bias\" in name:\n",
-    "    #         nn.init.constant_(param, 0.0)\n",
-    "    #     else:\n",
-    "    #         nn.init.xavier_normal_(param)\n",
     "    \n",
     "    learner = Learner(train_loader, val_loader, model, optim, loss_fn, device, model_name)\n",
     "    train_losses, val_losses = learner.train(max_epoch, True, patience)\n",
@@ -1890,8 +1883,6 @@
    "source": [
     "from visual_utils import plot_spectrum_predictions_random\n",
     "for i in range(len(documents_test)):\n",
-    "    if i != 22464:\n",
-    "        continue\n",
     "    if documents_test[i].metadata[\"name\"] not in interesting:\n",
     "        continue\n",
     "    print(documents_test[i].metadata[\"name\"])\n",
