--- a/generative_model_Decoder-de_novo.ipynb
+++ b/generative_model_Decoder-de_novo.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decoder"
+    "# Decoder\n",
+    "Attention-based Decoder model (training, prediction, and visualisation)"
    ]
   },
   {
@@ -32,7 +33,6 @@
     "base = \"data\"\n",
     "dataset = \"nist\"\n",
     "kind = \"de_novo\"\n",
-    "\n",
     "\n",
     "wv_path = f\"gas2vec/{kind}.model\"\n",
     "\n",
@@ -632,15 +632,7 @@
     "                #early_stopping=True, \n",
     "                #bad_words_ids = X_dict_batch[\"input_ids\"].tolist(),\n",
     "                pad_token_id=len(self.coder.vocab)\n",
-    "            ).cpu().numpy()[:, k:]\n",
-    "\n",
-    "#             res = torch.empty(len(X_dict_batch[\"input_ids\"]), l, dtype=torch.int) \n",
-    "#             for i in range(len(beam_output)):\n",
-    "#                 uniq_row = torch.unique(beam_output[i])\n",
-    "#                 assert len(uniq_row) >= l \n",
-    "#                 res[i, :] = uniq_row[:l]\n",
-    "#             return res\n",
-    "            \n",
+    "            ).cpu().numpy()[:, k:]        \n",
     "        \n",
     "        return self.model.generate(\n",
     "                X_dict_batch[\"input_ids\"], \n",
