--- a/knn_model_SpecKNN-de_novo.ipynb
+++ b/knn_model_SpecKNN-de_novo.ipynb
@@ -5,7 +5,8 @@
    "id": "18d731ee-32a1-4314-9a7e-1e4d72237c6b",
    "metadata": {},
    "source": [
-    "# Baseline KNN on spectra"
+    "# kNN on spectra\n",
+    "kNN model tatch the incomplete spectrum to database and average top hits"
    ]
   },
   {
