--- a/matching_model.ipynb
+++ b/matching_model.ipynb
@@ -5,7 +5,8 @@
    "id": "643b0ce4-7aff-492d-ae5f-6e5558c78340",
    "metadata": {},
    "source": [
-    "# DB matching"
+    "# DB matching\n",
+    "Simple database matching tool using cosine and weighted cosine similarities."
    ]
   },
   {
@@ -46,13 +47,10 @@
    "source": [
     "from matchms.importing import load_from_msp\n",
     "from data_utils import spectrum_processing, get_n_samples\n",
-    "\n",
     "from scipy.sparse import csr_matrix\n",
-    "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from numpy.random import default_rng\n",
     "from helpers import get_his_size, get_mz_vector\n",
-    "\n",
     "import numpy as np"
    ]
   },
