--- a/generative_model_LSTM-de_novo.ipynb
+++ b/generative_model_LSTM-de_novo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# LSTM\n",
-    "\n",
+    "LSTM models (training, prediction, and visualisation)\n",
     "    "
    ]
   },
@@ -51,19 +51,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.models import Word2Vec\n",
-    "\n",
-    "w2v = Word2Vec.load(wv_path)\n",
-    "vocab = {e:i for i, e in enumerate(w2v.wv.index2entity)}\n",
-    "#vocab[\"unknown\"] = -1\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,6 +69,32 @@
     "from data_utils import spectrum_processing\n",
     "from data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS, gen_collate\n",
     "from torch.utils.data import Dataset, DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DL packages\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import tqdm\n",
+    "from torch.distributions.multinomial import Multinomial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "w2v = Word2Vec.load(wv_path)\n",
+    "vocab = {e:i for i, e in enumerate(w2v.wv.index2entity)}\n",
+    "#vocab[\"unknown\"] = -1\n"
    ]
   },
   {
@@ -121,26 +134,6 @@
     "\n",
     "\n",
     "style=\"generation\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Spectral Model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DL packages\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import tqdm\n",
-    "from torch.distributions.multinomial import Multinomial"
    ]
   },
   {
@@ -286,9 +279,7 @@
    "metadata": {},
    "source": [
     "## Training utils\n",
-    "Let's define the learner class that's take care about the training with early stopping. \n",
-    "\n",
-    "We also split the data into train-val-test sets. \n"
+    "Let's define the learner class that's take care about the training with early stopping. \n"
    ]
   },
   {
@@ -805,8 +796,6 @@
     "            log_prob, _ = self.model(X_ds, return_sequence=False)\n",
     "        \n",
     "        if filtered:\n",
-    "            # print(log_prob.shape)\n",
-    "            # print(X_input.shape)\n",
     "            for i in range(len(log_prob)):\n",
     "                log_prob[i][X_input[i]] = -float(\"inf\")\n",
     "            args_batch = torch.argsort(log_prob, dim=-1, descending=True).int().cpu()\n",
@@ -876,7 +865,6 @@
    "outputs": [],
    "source": [
     "from visual_utils import plot_spectrum_predictions\n",
-    "\n",
     "\n",
     "predictor = PredictorDstLSTM.from_file(f\"models/{kind}/plstm\", TextMzCoder, max_mz=None, w2v=w2v)\n",
     "predictor.model.cpu()\n",
