add prediction on galaxy 2

--- a/real_data-galaxy.ipynb
+++ b/real_data-galaxy.ipynb
@@ -89,12 +89,12 @@
     "measured, matched, enhanced = dict(), dict(), dict()\n",
     "for i, conc in enumerate(concs):\n",
     "    measured[conc] = {s.metadata[\"compound_name\"]:s for s in get_spectra(f\"{measured_path[i]}\")}\n",
-    "#     measured[conc+\"_enh\"] = {s.metadata[\"compound_name\"]:s for s in get_spectra(f\"{measured_path}/{conc}_enh.msp\")}\n",
-    "#     enhanced[conc] = {s.metadata[\"compound_name\"]:s for s in get_spectra(f\"{measured_path}/{conc}_enh.msp\")}\n",
+    "    measured[conc+\"_enh\"] = {s.metadata[\"compound_name\"]:s for s in get_spectra(f\"{measured_path[i][:-4]}_enh.msp\")}\n",
+    "    enhanced[conc] = {s.metadata[\"compound_name\"]:s for s in get_spectra(f\"{measured_path[i][:-4]}_enh.msp\")}\n",
     "    \n",
     "    \n",
     "    matched[conc] = pd.read_csv(f\"{matched_path[i]}\", sep=\"\\t\", names=[\"id\", \"name\", \"n_ions\", \t\"confidence\"]).iloc[1:]\n",
-    "#     matched[conc+\"_enh\"] = pd.read_csv(f\"{matched_path}/{conc}_enh.txt\", sep=\"\\t\", names=[\"id\", \"name\", \"n_ions\", \t\"confidence\"])\n",
+    "    matched[conc+\"_enh\"] = pd.read_csv(f\"{matched_path[i]}\", sep=\"\\t\", names=[\"id\", \"name\", \"n_ions\", \t\"confidence\"])..iloc[1:]\n",
     "    "
    ]
   },
