--- a/generative_model_Decoder.ipynb
+++ b/generative_model_Decoder.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "<data_utils.HuggDS at 0x7fbcce67dda0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1025,13 +1025,33 @@
        "36"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predictor.coder.vocab[\"peak@115\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(hugg_ds)"
    ]
   },
   {
@@ -1043,7 +1063,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "29it [03:15,  6.73s/it]"
+      "14it [01:48,  6.59s/it]"
      ]
     }
    ],
@@ -1064,7 +1084,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(preds)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1116,7 +1138,7 @@
     "                       metadata=s.metadata,\n",
     "                       metadata_harmonization=False)\n",
     "        \n",
-    "def predicted spectra(spectrums, new_peaks, l=50):\n",
+    "def predict_spectra(spectrums, new_peaks, l=50):\n",
     "    assert len(spectrums) == len(new_peaks)\n",
     "    for i, s in enumerate(spectrums):\n",
     "        #print([s.peaks.mz, new_peaks[i][:l][0]])\n",
@@ -1151,7 +1173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_as_msp(enhanced_spectra, f\"{data_realtest_path[:-4]}_enh.msp\")"
+    "save_as_msp(enhanced_spectra, f\"{data_realtest_path[:-4]}_enh.msp\")\n",
+    "save_as_msp(predicted_spectra, f\"{data_realtest_path[:-4]}_pred.msp\")\n"
    ]
   },
   {
