add prediction on galaxy 3

--- a/generative_model_Decoder.ipynb
+++ b/generative_model_Decoder.ipynb
@@ -1056,14 +1056,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14it [01:48,  6.59s/it]"
+      "68it [07:57,  6.86s/it]\n"
      ]
     }
    ],
@@ -1081,43 +1081,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(preds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spec2vec.SpectrumDocument.SpectrumDocument at 0x7fbc79042128>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hugg_ds.ref_docs[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ionmode': 'Negative',\n",
+       " 'spectrumtype': 'Centroid',\n",
+       " 'num_peaks': '19',\n",
+       " 'compound_name': 'C11',\n",
+       " 'retention_time': '122.61',\n",
+       " 'retention_index': '1085.917874'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spectrums_supertest[1].metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 72.05694212,  73.06470108,  76.0181442 ,  78.01498857,\n",
+       "        80.03861506,  86.06807381,  86.07251984, 100.08824961,\n",
+       "       114.09945172, 120.08875599, 127.11156231, 176.06747288,\n",
+       "       302.12101639])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spectrums_supertest[0].peaks.mz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1178,7 @@
     "    assert len(spectrums) == len(new_peaks)\n",
     "    for i, s in enumerate(spectrums):\n",
     "        #print([s.peaks.mz, new_peaks[i][:l][0]])\n",
-    "        mz = np.concatenate([s.peaks.mz, new_peaks[i][0][:l].astype(float)])\n",
+    "        mz = np.concatenate([s.peaks.mz, new_peaks[i][:l].astype(float)])\n",
     "        intensities = np.concatenate([s.peaks.intensities, np.repeat(0.2, l)])\n",
     "        \n",
     "        p = mz.argsort()\n",
@@ -1142,7 +1194,7 @@
     "    assert len(spectrums) == len(new_peaks)\n",
     "    for i, s in enumerate(spectrums):\n",
     "        #print([s.peaks.mz, new_peaks[i][:l][0]])\n",
-    "        mz = np.concatenate([new_peaks[i][0][:l].astype(float)])\n",
+    "        mz = np.concatenate([new_peaks[i][:l].astype(float)])\n",
     "        intensities = np.concatenate([np.repeat(0.2, l)])\n",
     "        \n",
     "        p = mz.argsort()\n",
@@ -1160,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
