final gpt2 test done

--- a/generative_model_Decoder.ipynb
+++ b/generative_model_Decoder.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,16 +974,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<data_utils.HuggDS at 0x7fbcce67dda0>"
+       "<data_utils.HuggDS at 0x7f94f2529e48>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
        "36"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "68"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,14 +1056,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "68it [07:57,  6.86s/it]\n"
+      "68it [03:57,  3.56s/it]\n"
      ]
     }
    ],
@@ -1074,14 +1074,14 @@
     "    #print(X_dict_batch_)\n",
     "    X_dict_batch = {\"input_ids\": torch.atleast_2d(X_dict_batch_[\"input_ids\"][X_dict_batch_[\"attention_mask\"] == 1])}\n",
     "    #print(X_dict_batch)\n",
-    "    pred = predictor.predict_l_next(X_dict_batch, l=20)[0]\n",
+    "    pred = predictor.predict_l_next(X_dict_batch, l=10)[0]\n",
     "    pred = predictor.coder.index2mz[pred]\n",
     "    preds.append(pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "68"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,16 +1101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spec2vec.SpectrumDocument.SpectrumDocument at 0x7fbc79042128>"
+       "<spec2vec.SpectrumDocument.SpectrumDocument at 0x7f94f2539278>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        " 'retention_index': '1085.917874'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "       302.12101639])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,7 @@
     "    for i, s in enumerate(spectrums):\n",
     "        #print([s.peaks.mz, new_peaks[i][:l][0]])\n",
     "        mz = np.concatenate([s.peaks.mz, new_peaks[i][:l].astype(float)])\n",
-    "        intensities = np.concatenate([s.peaks.intensities, np.repeat(0.2, l)])\n",
+    "        intensities = np.concatenate([s.peaks.intensities, np.repeat(0.1, l)])\n",
     "        \n",
     "        p = mz.argsort()\n",
     "        mz= mz[p]\n",
@@ -1195,7 +1195,7 @@
     "    for i, s in enumerate(spectrums):\n",
     "        #print([s.peaks.mz, new_peaks[i][:l][0]])\n",
     "        mz = np.concatenate([new_peaks[i][:l].astype(float)])\n",
-    "        intensities = np.concatenate([np.repeat(0.2, l)])\n",
+    "        intensities = np.concatenate([np.repeat(0.1, l)])\n",
     "        \n",
     "        p = mz.argsort()\n",
     "        mz= mz[p]\n",
@@ -1206,13 +1206,13 @@
     "                       metadata=s.metadata,\n",
     "                       metadata_harmonization=False)\n",
     "        \n",
-    "enhanced_spectra = [*enhance_spectra(spectrums_supertest, preds, 20)]\n",
-    "predicted_spectra = [*predict_spectra(spectrums_supertest, preds, 20)]\n"
+    "enhanced_spectra = [*enhance_spectra(spectrums_supertest, preds, 5)]\n",
+    "predicted_spectra = [*predict_spectra(spectrums_supertest, preds, 5)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
